// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deposit into existing position: depositBase 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 120117,
}
`;

exports[`Deposit into existing position: depositQuote 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 120177,
}
`;

exports[`Liquidation liquidate long position and create new long position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 229129,
}
`;

exports[`Liquidation liquidate long position and create new position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 246008,
}
`;

exports[`Liquidation liquidate short position and create new position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 257180,
}
`;

exports[`Liquidation liquidate short position and create new short position 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 240140,
}
`;

exports[`Open position: depositBase 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 203361,
}
`;

exports[`Open position: depositQuote 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 203397,
}
`;

exports[`System initialized: closePosition 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 241490,
}
`;

exports[`System initialized: depositBase 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 209011,
}
`;

exports[`System initialized: depositQuote 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 209059,
}
`;

exports[`System initialized: long 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 304717,
}
`;

exports[`System initialized: short 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 294830,
}
`;

exports[`System initialized: withdrawBase 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 177430,
}
`;

exports[`System initialized: withdrawQuote 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 190306,
}
`;

exports[`mc happens: closePosition with two mc 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 318375,
}
`;

exports[`mc happens: depositBase with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 237770,
}
`;

exports[`mc happens: depositBase with two mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 298875,
}
`;

exports[`mc happens: depositQuote with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 233685,
}
`;

exports[`mc happens: depositQuote with two mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 298904,
}
`;

exports[`mc happens: long closePosition with one mc 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 250912,
}
`;

exports[`mc happens: long initialized heap with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 268988,
}
`;

exports[`mc happens: long with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 319710,
}
`;

exports[`mc happens: long with two mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 328813,
}
`;

exports[`mc happens: short with one mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 314038,
}
`;

exports[`mc happens: short with two mc 1`] = `
Object {
  "calldataByteLength": 36,
  "gasUsed": 324134,
}
`;
